# C_plus_plus

Cmake/: CMakeLists.txt  main.cpp
ConvertNumber/: CMakeLists.txt  main.cpp
ConvertNumber/ui/: convert.cpp  convert.h  convert.ui
FirstC++APP/: CMakeLists.txt  function_request_shedule.md  read.md
FirstC++APP/forms/: adminview.cpp  adminview.h  adminview.ui  loginview.cpp  loginview.h  loginview.ui  studentview.cpp  studentview.h  studentview.ui
FirstC++APP/include/ views/: loginview.h  studentview.h
FirstC++APP/include/controllers/: admincontroller.h  studentcontroller.h
FirstC++APP/include/database/: dbmanager.h  querymodel.h
FirstC++APP/include/models/: course.h  enrollment.h  student.h
FirstC++APP/include/views/: adminview.h  studentview.h  ui_adminview.h  ui_loginview.h  ui_studentview.h
FirstC++APP/resources/: FirstC++APP.qrc
FirstC++APP/src/: main.cpp
FirstC++APP/src/controllers/: studentcontroller.cpp
FirstC++APP/src/database/: dbmanager.cpp  querymodel.cpp
FirstC++APP/src/models/: student.cpp
FirstC++APP/src/views/: adminview.cpp  loginview.cpp  studentview.cpp
NumberConvert/: CMakeLists.txt
NumberString/: CMakeLists.txt  main.cpp
NumberString/ui/: convert.cpp  convert.h  convert.ui
SIMS/: CMakeLists.txt  Mysqlcppconn8.cmake  buildStructure.txt  main.cpp  request.md  structure.txt  test.xml
SIMS/form/: adminform.ui  loginform.ui  studentform.ui
SIMS/includes/controller/: admincontroller.h  logincontroller.h  studentViewControl.h  studentViewController.h
SIMS/includes/database/: dbmanager.h  querymodel.h
SIMS/includes/form/: adminform.h  loginform.h  studentform.h
SIMS/includes/model/: StudentCourses.h  StudentScore.h  course.h  student.h  teacherinformation.h  useraccount.h
SIMS/resources/: SIMS.qrc
SIMS/sims/: course.sql  studeninformation.sql  studentcourses.sql  studentinformation.sql  studentscore.sql  teacherinformation.sql  useraccounts.sql
SIMS/src/controller/: AccountManagementAndTeacherManagement.cpp  admincontroller.cpp  logincontroller.cpp  studentViewControl.cpp  studentViewController.cpp
SIMS/src/database/: dbmanager.cpp  dbmanagerAccountAndTeacher.cpp  querymodel.cpp
SIMS/src/form/: adminform.cpp  adminformAccountAndTeacherManagement.cpp  loginform.cpp  studentform.cpp
SIMS/src/model/: StudentCourses.cpp  StudentScore.cpp  course.cpp  student.cpp  teacherinformation.cpp  useraccount.cpp
StringNumber/: CMakeLists.txt  main.cpp
StringNumber/ui/: convert.cpp  convert.h
Test/: main.cpp  test.cpp  test.h
